# sdd_lab_app

./: .gitignore  Makefile  README.md  pyproject.toml  spec.md
backend/: main.py  metadata.py  models.py  storage.py
docs/: prompts.md
frontend/: app.py
frontend/pages/: 1_Library.py
tests/: test_api.py  test_metadata.py
