[project]
name = "sdd-lab-app"
version = "0.1.0"
description = "Read-it-later app (FastAPI + Streamlit + TinyDB)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "tinydb>=4.8",
    "streamlit>=1.30",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.26",
]

[tool.setuptools]
packages = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
